k8s/student/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: student                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: student               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: student-service:03       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: student-service           # ім'я контейнеру
          ports:
            - containerPort: 80 # порт по якому можна звертатись до поди
