k8s/student/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80        # порт по якому можна звератись до сервісу
      targetPort: 80 # порт контейнера
  selector:
    app: student
