k8s/student/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /student
            pathType: "Prefix"
            backend:
              service:
                name: student-service
                port:
                  number: 80
